--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <hr>
           <!-- Pager -->
           <div class="clearfix">
-            <a class="btn btn-primary float-right" href="index2.html">Older Posts &rarr;</a>
+            <a class="btn btn-primary float-right" href="/Indexes/index2.html">Older Posts &rarr;</a>
           </div>
         </div>
       </div>
