--- a/pages/PerthSemester.html
+++ b/pages/PerthSemester.html
@@ -11,15 +11,15 @@
     <title>Study Abroad Semester in Perth</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="css/clean-blog.min.css" rel="stylesheet">
+    <link href="/css/clean-blog.min.css" rel="stylesheet">
 
   </head>
 
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+        <a class="navbar-brand" href="/index.html">Start Bootstrap</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -36,13 +36,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="/contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -50,7 +50,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/Perth at Night.jpg')">
+    <header class="masthead" style="background-image: url('/img/Perth at Night.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
@@ -82,7 +82,7 @@
             Some of the other major industries are argicultural, horticultural, and mining.</p>
             <p>I thouroughly enjoyed my time in New Zealand, and hope to go back some day.</p>
             <a href="#">
-              <img class="img-fluid" src="img/IMG_4786.JPG" alt="">
+              <img class="img-fluid" src="/img/IMG_4786.JPG" alt="">
             </a>
             
 
@@ -93,7 +93,7 @@
             At this point it was lunchtime, so our tourguides took us to a local resteraunt with an all-you-can eat buffet.  From there, we headed to a coffee plantation and learned about the coffee industry in Bali.  We finished the day off by eating dinner and listening to live music in our hotel.  It was one of my favorite days of the semester, and possible of my college experience.
             </p>
             <a href="#">
-              <img class="img-fluid" src="img/IMG_2193.JPG" alt="">
+              <img class="img-fluid" src="/img/IMG_2193.JPG" alt="">
             </a>
           </div>
         </div>
