--- a/pages/SIBCCardinalHealth.html
+++ b/pages/SIBCCardinalHealth.html
@@ -11,15 +11,15 @@
     <title>SIBC Cardindal Health project</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="css/clean-blog.min.css" rel="stylesheet">
+    <link href="/css/clean-blog.min.css" rel="stylesheet">
 
   </head>
 
@@ -50,7 +50,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/Cardinal Health Logo.jpg')">
+    <header class="masthead" style="background-image: url('/img/Cardinal Health Logo.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
@@ -79,7 +79,7 @@
               
             </p>
             <a href="#">
-              <img class="img-fluid" src="img/SIBC_Cardinal_health_photo.jpg" alt="">
+              <img class="img-fluid" src="/img/SIBC_Cardinal_health_photo.jpg" alt="">
             </a>
             <span class="caption text-muted">The travel team for the project</span>
 
@@ -135,11 +135,11 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/clean-blog.min.js"></script>
+    <script src="/js/clean-blog.min.js"></script>
 
   </body>
 
