--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <header id="header" class="header-tops">
     <div class="container">
 
-      <h1><a href="index.html">Emily Jones</a></h1>
+      <h1><a href="index.html">Sean Scannell</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2>I'm a passionate <span>graphic designer</span> from New York</h2>
@@ -92,17 +92,17 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 May 1995</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 25 February 1997</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li>
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : New York, USA</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +716 697 4180</li>
+                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Buffalo, New York</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 30</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master</li>
-                <li><i class="icofont-rounded-right"></i> <strong>PhEmailone:</strong> email@example.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 23</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> MBA and BSEE</li>
+                <li><i class="icofont-rounded-right"></i> <strong>PhEmailone:</strong> sscanne2@alumni.nd.edu</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
               </ul>
             </div>
